# pypp-python

./: .gitignore  LICENSE  changelog.md  pyproject.toml  readme.md
compy_python/: __init__.py  dict_get.py  lists.py  nones.py  ownership.py  printing.py  resources.py  tuple_get.py
compy_python/stl/: __init__.py
pypp_python/: __init__.py  configclass.py  conversions.py  custom_types.py  dict_get.py  exceptionclass.py  lists.py  math.py  ownership.py  printing.py  resources.py  strings.py  union.py
pypp_python/interfaces/: __init__.py
pypp_python/stl/: __init__.py  pypp_time.py
