[project]
name = "pypp-python"
version = "0.0.0"
description = "contains necessary python code to work with Py++"
authors = [{ name = "Curtis Puetz", email = "todo@example.com" }]
readme = "readme.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"